<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <RadioGroup
            android:id="@+id/SelectPositionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPS" />

            <RadioButton
                android:id="@+id/last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastPos" />

            <RadioButton
                android:id="@+id/network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network" />
        </RadioGroup>

        <Button
            android:id="@+id/button_click"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/click" />
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:text="@string/description" />
    </LinearLayout>

</LinearLayout>